[package]
name = "sigma-ssg"
version = "0.1.0"
authors = ["Denis Onder <denis_onder@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unzip = "0.1.0"
comrak = "0.8"
sass-rs = "0.2.2"
handlebars = "3.3.0"
serde = { version = "1.0.114", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }